Added ability to filter by completed|incomplete
